Config by connection with database TiendaDB

--- a/Tiendaapi/appsettings.json
+++ b/Tiendaapi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "conexionmaestra": "data source=SECA;initial catalog=TIENDADB;user=code;password=123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
