--- a/Tiendaapi/Properties/launchSettings.json
+++ b/Tiendaapi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/productos",
       "applicationUrl": "https://localhost:7213;http://localhost:5273",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/productos",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
